--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+html
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +39,7 @@
         <th>পেমেন্ট (৳)</th>
         <th>বাকি (৳)</th>
       </tr>
-    </table>
+      </table>
 
     <h3>মোট বাকি: <span id="totalDue">0</span> ৳</h3>
   </div>
