--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>APK BY CEO APON</title>
     <style>
         body {
@@ -60,6 +60,20 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+
+        @media only screen and (max-width: 768px) {
+            .container {
+                width: 100%;
+                padding: 10px;
+            }
+            table {
+                font-size: 12px;
+            }
+            input[type="text"], input[type="number"], input[type="password"] {
+                padding: 5px;
+                margin-bottom: 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -109,7 +123,6 @@
     <script>
         let products = JSON.parse(localStorage.getItem('products')) || [];
         let password = "CEO1212";
-
         document.getElementById('login-btn').addEventListener('click', () => {
             let inputPassword = document.getElementById('password').value;
             if (inputPassword === password) {
